# VTCBench

./: .gitignore  CITATION.bib  CITATION.cff  README.md  _config.yml  pyproject.toml
config/data/: 250.yml  locomo.json  nolima.json  nolima_pure_text.json  nolima_simpleqa.json  ruler.json  ruler_completion.json
config/model/: dsocr.json  gpt-5.json  qwen_2.5_vl.json  qwen_2.5_vl_72b.json  qwen_2.5_vl_7b.json
config/render/: 16k.yml  big.yml  debug.yml  default.yml  giant.yml  locomo.yml
data/: README.md
docs/: ACKNOWLEDGMENTS.md  DATA.md  USAGE.md
examples/: calc_compratio.py  collect.py  convert.py  run.py  run_dry.py  run_s.py  run_saveimg.py  run_wild.py
llm_serving/: .gitignore  README.md  pyproject.toml
slurm/: qwen25vl_ruler.sbatch
src/locoxim/: args.py  async_evaluate.py  dataio.py  defaults.py  img_counter.py  metric.py  token_counter.py
src/locoxim/NoLiMa/: book_haystack.py
src/locoxim/client/: async_api_connector.py  image_helper.py
src/vtcbench/client/: image_helper.py
